--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
     <!------- Favicon ------->
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Animate.CSS -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
   </head>
 
   <body>
