--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Animate.CSS -->
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-    />
-  </head>
+   
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <body>
     <div id="root"></div>
